yacc.output
Terminals unused in grammar

    STR_CONST
    ERR_TOKEN
    SWITCH
    CASE
    GOTO
    DO


Grammar

    0 $accept: PROGRAM $end

    1 PROGRAM: STMT_LIST
    2        | PROGRAM END

    3 STMT_LIST: STMT
    4          | STMT_LIST STMT

    5 STMT: EXPR_STMT
    6     | VAR_DECL_STMT
    7     | FUNC_DECL_STMT
    8     | FOR_STMT
    9     | IF_STMT
   10     | CONTINUE_STMT
   11     | SEMICOLON
   12     | SLASH_COMMENT
   13     | BLOCK_STMT
   14     | RETURN_STMT
   15     | WHILE_STMT
   16     | BREAK_STMT

   17 CONTINUE_STMT: CONTINUE SEMICOLON

   18 EXPR_STMT: EXPR SEMICOLON

   19 VAR_DECLARATION: TYPE VAR_DECLARATOR_LIST
   20                | CONST TYPE VAR_DECLARATOR_LIST

   21 VAR_DECL_STMT: VAR_DECLARATION SEMICOLON

   22 FUNC_BODY: LBRACE RBRACE
   23          | LBRACE STMT_LIST RBRACE

   24 FUNC_DECL_STMT: TYPE IDENT LPAREN PARAM_DECLARATOR_LIST RPAREN FUNC_BODY

   25 FOR_STMT: FOR LPAREN VAR_DECLARATION SEMICOLON EXPR SEMICOLON EXPR RPAREN STMT
   26         | FOR LPAREN EXPR SEMICOLON EXPR SEMICOLON EXPR RPAREN STMT

   27 IF_STMT: IF LPAREN EXPR RPAREN STMT
   28        | IF LPAREN EXPR RPAREN STMT ELSE STMT

   29 BLOCK_STMT: LBRACE RBRACE
   30           | LBRACE STMT_LIST RBRACE

   31 RETURN_STMT: RETURN SEMICOLON
   32            | RETURN EXPR SEMICOLON

   33 BREAK_STMT: BREAK SEMICOLON

   34 WHILE_STMT: WHILE LPAREN EXPR RPAREN STMT

   35 PARAM_DECLARATOR: TYPE IDENT
   36                 | TYPE IDENT LBRACKET RBRACKET
   37                 | TYPE IDENT LBRACKET RBRACKET ARRAY_DIMENSION_EXPR_LIST
   38                 | TYPE IDENT ARRAY_DIMENSION_EXPR_LIST

   39 PARAM_DECLARATOR_LIST: ε
   40                      | PARAM_DECLARATOR
   41                      | PARAM_DECLARATOR_LIST COMMA PARAM_DECLARATOR

   42 VAR_DECLARATOR: IDENT
   43               | IDENT ASSIGN INITIALIZER
   44               | IDENT LBRACKET RBRACKET
   45               | IDENT LBRACKET RBRACKET ARRAY_DIMENSION_EXPR_LIST
   46               | IDENT LBRACKET RBRACKET ASSIGN INITIALIZER
   47               | IDENT LBRACKET RBRACKET ARRAY_DIMENSION_EXPR_LIST ASSIGN INITIALIZER
   48               | IDENT ARRAY_DIMENSION_EXPR_LIST
   49               | IDENT ARRAY_DIMENSION_EXPR_LIST ASSIGN INITIALIZER

   50 VAR_DECLARATOR_LIST: VAR_DECLARATOR
   51                    | VAR_DECLARATOR_LIST COMMA VAR_DECLARATOR

   52 INITIALIZER: NOCOMMA_EXPR
   53            | LBRACE INITIALIZER_LIST RBRACE

   54 INITIALIZER_LIST: INITIALIZER
   55                 | INITIALIZER_LIST COMMA INITIALIZER

   56 ASSIGN_EXPR: LEFT_VAL_EXPR ASSIGN NOCOMMA_EXPR

   57 EXPR_LIST: NOCOMMA_EXPR
   58          | EXPR_LIST COMMA NOCOMMA_EXPR

   59 EXPR: NOCOMMA_EXPR
   60     | EXPR COMMA NOCOMMA_EXPR

   61 NOCOMMA_EXPR: LOGICAL_OR_EXPR
   62             | ASSIGN_EXPR

   63 LOGICAL_OR_EXPR: LOGICAL_AND_EXPR
   64                | LOGICAL_OR_EXPR OR LOGICAL_AND_EXPR

   65 LOGICAL_AND_EXPR: EQUALITY_EXPR
   66                 | LOGICAL_AND_EXPR AND EQUALITY_EXPR

   67 EQUALITY_EXPR: RELATIONAL_EXPR
   68              | EQUALITY_EXPR EQ RELATIONAL_EXPR
   69              | EQUALITY_EXPR NEQ RELATIONAL_EXPR

   70 RELATIONAL_EXPR: ADDSUB_EXPR
   71                | RELATIONAL_EXPR LT ADDSUB_EXPR
   72                | RELATIONAL_EXPR GT ADDSUB_EXPR
   73                | RELATIONAL_EXPR LE ADDSUB_EXPR
   74                | RELATIONAL_EXPR GE ADDSUB_EXPR

   75 ADDSUB_EXPR: MULDIV_EXPR
   76            | ADDSUB_EXPR PLUS MULDIV_EXPR
   77            | ADDSUB_EXPR MINUS MULDIV_EXPR

   78 MULDIV_EXPR: UNARY_EXPR
   79            | MULDIV_EXPR MUL UNARY_EXPR
   80            | MULDIV_EXPR DIV UNARY_EXPR
   81            | MULDIV_EXPR MOD UNARY_EXPR

   82 UNARY_EXPR: BASIC_EXPR
   83           | UNARY_OP UNARY_EXPR

   84 BASIC_EXPR: LITERAL_EXPR
   85           | LEFT_VAL_EXPR
   86           | LPAREN EXPR RPAREN
   87           | FUNC_CALL_EXPR

   88 FUNC_CALL_EXPR: IDENT LPAREN RPAREN
   89               | IDENT LPAREN EXPR_LIST RPAREN

   90 ARRAY_DIMENSION_EXPR: LBRACKET NOCOMMA_EXPR RBRACKET

   91 ARRAY_DIMENSION_EXPR_LIST: ARRAY_DIMENSION_EXPR
   92                          | ARRAY_DIMENSION_EXPR_LIST ARRAY_DIMENSION_EXPR

   93 LEFT_VAL_EXPR: IDENT
   94              | IDENT ARRAY_DIMENSION_EXPR_LIST

   95 LITERAL_EXPR: INT_CONST
   96             | FLOAT_CONST
   97             | LL_CONST

   98 TYPE: INT
   99     | FLOAT
  100     | VOID

  101 UNARY_OP: PLUS
  102         | MINUS
  103         | NOT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT_CONST <int> (258) 95
    LL_CONST <long long> (259) 97
    STR_CONST <std::string> (260)
    ERR_TOKEN <std::string> (261)
    SLASH_COMMENT <std::string> (262) 12
    FLOAT_CONST <float> (263) 96
    IDENT <std::string> (264) 24 35 36 37 38 42 43 44 45 46 47 48 49 88 89 93 94
    INT (265) 98
    FLOAT (266) 99
    VOID (267) 100
    IF (268) 27 28
    ELSE (269) 28
    FOR (270) 25 26
    WHILE (271) 34
    CONTINUE (272) 17
    BREAK (273) 33
    SWITCH (274)
    CASE (275)
    GOTO (276)
    DO (277)
    RETURN (278) 31 32
    CONST (279) 20
    SEMICOLON (280) 11 17 18 21 25 26 31 32 33
    COMMA (281) 41 51 55 58 60
    LPAREN (282) 24 25 26 27 28 34 86 88 89
    RPAREN (283) 24 25 26 27 28 34 86 88 89
    LBRACKET (284) 36 37 44 45 46 47 90
    RBRACKET (285) 36 37 44 45 46 47 90
    LBRACE (286) 22 23 29 30 53
    RBRACE (287) 22 23 29 30 53
    PLUS (288) 76 101
    MINUS (289) 77 102
    MUL (290) 79
    DIV (291) 80
    MOD (292) 81
    EQ (293) 68
    GT (294) 72
    LT (295) 71
    GE (296) 74
    LE (297) 73
    NEQ (298) 69
    AND (299) 66
    OR (300) 64
    NOT (301) 103
    ASSIGN (302) 43 46 47 49 56
    END (303) 2
    THEN (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    PROGRAM <FE::AST::Root*> (51)
        on left: 1 2
        on right: 0 2
    STMT_LIST <std::vector<FE::AST::StmtNode*>*> (52)
        on left: 3 4
        on right: 1 4 23 30
    STMT <FE::AST::StmtNode*> (53)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 3 4 25 26 27 28 34
    CONTINUE_STMT <FE::AST::StmtNode*> (54)
        on left: 17
        on right: 10
    EXPR_STMT <FE::AST::StmtNode*> (55)
        on left: 18
        on right: 5
    VAR_DECLARATION <FE::AST::VarDeclaration*> (56)
        on left: 19 20
        on right: 21 25
    VAR_DECL_STMT <FE::AST::StmtNode*> (57)
        on left: 21
        on right: 6
    FUNC_BODY <FE::AST::StmtNode*> (58)
        on left: 22 23
        on right: 24
    FUNC_DECL_STMT <FE::AST::StmtNode*> (59)
        on left: 24
        on right: 7
    FOR_STMT <FE::AST::StmtNode*> (60)
        on left: 25 26
        on right: 8
    IF_STMT <FE::AST::StmtNode*> (61)
        on left: 27 28
        on right: 9
    BLOCK_STMT <FE::AST::StmtNode*> (62)
        on left: 29 30
        on right: 13
    RETURN_STMT <FE::AST::StmtNode*> (63)
        on left: 31 32
        on right: 14
    BREAK_STMT <FE::AST::StmtNode*> (64)
        on left: 33
        on right: 16
    WHILE_STMT <FE::AST::StmtNode*> (65)
        on left: 34
        on right: 15
    PARAM_DECLARATOR <FE::AST::ParamDeclarator*> (66)
        on left: 35 36 37 38
        on right: 40 41
    PARAM_DECLARATOR_LIST <std::vector<FE::AST::ParamDeclarator*>*> (67)
        on left: 39 40 41
        on right: 24 41
    VAR_DECLARATOR <FE::AST::VarDeclarator*> (68)
        on left: 42 43 44 45 46 47 48 49
        on right: 50 51
    VAR_DECLARATOR_LIST <std::vector<FE::AST::VarDeclarator*>*> (69)
        on left: 50 51
        on right: 19 20 51
    INITIALIZER <FE::AST::InitDecl*> (70)
        on left: 52 53
        on right: 43 46 47 49 54 55
    INITIALIZER_LIST <std::vector<FE::AST::InitDecl*>*> (71)
        on left: 54 55
        on right: 53 55
    ASSIGN_EXPR <FE::AST::ExprNode*> (72)
        on left: 56
        on right: 62
    EXPR_LIST <std::vector<FE::AST::ExprNode*>*> (73)
        on left: 57 58
        on right: 58 89
    EXPR <FE::AST::ExprNode*> (74)
        on left: 59 60
        on right: 18 25 26 27 28 32 34 60 86
    NOCOMMA_EXPR <FE::AST::ExprNode*> (75)
        on left: 61 62
        on right: 52 56 57 58 59 60 90
    LOGICAL_OR_EXPR <FE::AST::ExprNode*> (76)
        on left: 63 64
        on right: 61 64
    LOGICAL_AND_EXPR <FE::AST::ExprNode*> (77)
        on left: 65 66
        on right: 63 64 66
    EQUALITY_EXPR <FE::AST::ExprNode*> (78)
        on left: 67 68 69
        on right: 65 66 68 69
    RELATIONAL_EXPR <FE::AST::ExprNode*> (79)
        on left: 70 71 72 73 74
        on right: 67 68 69 71 72 73 74
    ADDSUB_EXPR <FE::AST::ExprNode*> (80)
        on left: 75 76 77
        on right: 70 71 72 73 74 76 77
    MULDIV_EXPR <FE::AST::ExprNode*> (81)
        on left: 78 79 80 81
        on right: 75 76 77 79 80 81
    UNARY_EXPR <FE::AST::ExprNode*> (82)
        on left: 82 83
        on right: 78 79 80 81 83
    BASIC_EXPR <FE::AST::ExprNode*> (83)
        on left: 84 85 86 87
        on right: 82
    FUNC_CALL_EXPR <FE::AST::ExprNode*> (84)
        on left: 88 89
        on right: 87
    ARRAY_DIMENSION_EXPR <FE::AST::ExprNode*> (85)
        on left: 90
        on right: 91 92
    ARRAY_DIMENSION_EXPR_LIST <std::vector<FE::AST::ExprNode*>*> (86)
        on left: 91 92
        on right: 37 38 45 47 48 49 92 94
    LEFT_VAL_EXPR <FE::AST::ExprNode*> (87)
        on left: 93 94
        on right: 56 85
    LITERAL_EXPR <FE::AST::ExprNode*> (88)
        on left: 95 96 97
        on right: 84
    TYPE <FE::AST::Type*> (89)
        on left: 98 99 100
        on right: 19 20 24 35 36 37 38
    UNARY_OP <FE::AST::Operator> (90)
        on left: 101 102 103
        on right: 83


State 0

    0 $accept: • PROGRAM $end

    INT_CONST      shift, and go to state 1
    LL_CONST       shift, and go to state 2
    SLASH_COMMENT  shift, and go to state 3
    FLOAT_CONST    shift, and go to state 4
    IDENT          shift, and go to state 5
    INT            shift, and go to state 6
    FLOAT          shift, and go to state 7
    VOID           shift, and go to state 8
    IF             shift, and go to state 9
    FOR            shift, and go to state 10
    WHILE          shift, and go to state 11
    CONTINUE       shift, and go to state 12
    BREAK          shift, and go to state 13
    RETURN         shift, and go to state 14
    CONST          shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    LPAREN         shift, and go to state 17
    LBRACE         shift, and go to state 18
    PLUS           shift, and go to state 19
    MINUS          shift, and go to state 20
    NOT            shift, and go to state 21

    PROGRAM           go to state 22
    STMT_LIST         go to state 23
    STMT              go to state 24
    CONTINUE_STMT     go to state 25
    EXPR_STMT         go to state 26
    VAR_DECLARATION   go to state 27
    VAR_DECL_STMT     go to state 28
    FUNC_DECL_STMT    go to state 29
    FOR_STMT          go to state 30
    IF_STMT           go to state 31
    BLOCK_STMT        go to state 32
    RETURN_STMT       go to state 33
    BREAK_STMT        go to state 34
    WHILE_STMT        go to state 35
    ASSIGN_EXPR       go to state 36
    EXPR              go to state 37
    NOCOMMA_EXPR      go to state 38
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    TYPE              go to state 50
    UNARY_OP          go to state 51


State 1

   95 LITERAL_EXPR: INT_CONST •

    $default  reduce using rule 95 (LITERAL_EXPR)


State 2

   97 LITERAL_EXPR: LL_CONST •

    $default  reduce using rule 97 (LITERAL_EXPR)


State 3

   12 STMT: SLASH_COMMENT •

    $default  reduce using rule 12 (STMT)


State 4

   96 LITERAL_EXPR: FLOAT_CONST •

    $default  reduce using rule 96 (LITERAL_EXPR)


State 5

   88 FUNC_CALL_EXPR: IDENT • LPAREN RPAREN
   89               | IDENT • LPAREN EXPR_LIST RPAREN
   93 LEFT_VAL_EXPR: IDENT •
   94              | IDENT • ARRAY_DIMENSION_EXPR_LIST

    LPAREN    shift, and go to state 52
    LBRACKET  shift, and go to state 53

    $default  reduce using rule 93 (LEFT_VAL_EXPR)

    ARRAY_DIMENSION_EXPR       go to state 54
    ARRAY_DIMENSION_EXPR_LIST  go to state 55


State 6

   98 TYPE: INT •

    $default  reduce using rule 98 (TYPE)


State 7

   99 TYPE: FLOAT •

    $default  reduce using rule 99 (TYPE)


State 8

  100 TYPE: VOID •

    $default  reduce using rule 100 (TYPE)


State 9

   27 IF_STMT: IF • LPAREN EXPR RPAREN STMT
   28        | IF • LPAREN EXPR RPAREN STMT ELSE STMT

    LPAREN  shift, and go to state 56


State 10

   25 FOR_STMT: FOR • LPAREN VAR_DECLARATION SEMICOLON EXPR SEMICOLON EXPR RPAREN STMT
   26         | FOR • LPAREN EXPR SEMICOLON EXPR SEMICOLON EXPR RPAREN STMT

    LPAREN  shift, and go to state 57


State 11

   34 WHILE_STMT: WHILE • LPAREN EXPR RPAREN STMT

    LPAREN  shift, and go to state 58


State 12

   17 CONTINUE_STMT: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 59


State 13

   33 BREAK_STMT: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 60


State 14

   31 RETURN_STMT: RETURN • SEMICOLON
   32            | RETURN • EXPR SEMICOLON

    INT_CONST    shift, and go to state 1
    LL_CONST     shift, and go to state 2
    FLOAT_CONST  shift, and go to state 4
    IDENT        shift, and go to state 5
    SEMICOLON    shift, and go to state 61
    LPAREN       shift, and go to state 17
    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    NOT          shift, and go to state 21

    ASSIGN_EXPR       go to state 36
    EXPR              go to state 62
    NOCOMMA_EXPR      go to state 38
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    UNARY_OP          go to state 51


State 15

   20 VAR_DECLARATION: CONST • TYPE VAR_DECLARATOR_LIST

    INT    shift, and go to state 6
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 8

    TYPE  go to state 63


State 16

   11 STMT: SEMICOLON •

    $default  reduce using rule 11 (STMT)


State 17

   86 BASIC_EXPR: LPAREN • EXPR RPAREN

    INT_CONST    shift, and go to state 1
    LL_CONST     shift, and go to state 2
    FLOAT_CONST  shift, and go to state 4
    IDENT        shift, and go to state 5
    LPAREN       shift, and go to state 17
    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    NOT          shift, and go to state 21

    ASSIGN_EXPR       go to state 36
    EXPR              go to state 64
    NOCOMMA_EXPR      go to state 38
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    UNARY_OP          go to state 51


State 18

   29 BLOCK_STMT: LBRACE • RBRACE
   30           | LBRACE • STMT_LIST RBRACE

    INT_CONST      shift, and go to state 1
    LL_CONST       shift, and go to state 2
    SLASH_COMMENT  shift, and go to state 3
    FLOAT_CONST    shift, and go to state 4
    IDENT          shift, and go to state 5
    INT            shift, and go to state 6
    FLOAT          shift, and go to state 7
    VOID           shift, and go to state 8
    IF             shift, and go to state 9
    FOR            shift, and go to state 10
    WHILE          shift, and go to state 11
    CONTINUE       shift, and go to state 12
    BREAK          shift, and go to state 13
    RETURN         shift, and go to state 14
    CONST          shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    LPAREN         shift, and go to state 17
    LBRACE         shift, and go to state 18
    RBRACE         shift, and go to state 65
    PLUS           shift, and go to state 19
    MINUS          shift, and go to state 20
    NOT            shift, and go to state 21

    STMT_LIST         go to state 66
    STMT              go to state 24
    CONTINUE_STMT     go to state 25
    EXPR_STMT         go to state 26
    VAR_DECLARATION   go to state 27
    VAR_DECL_STMT     go to state 28
    FUNC_DECL_STMT    go to state 29
    FOR_STMT          go to state 30
    IF_STMT           go to state 31
    BLOCK_STMT        go to state 32
    RETURN_STMT       go to state 33
    BREAK_STMT        go to state 34
    WHILE_STMT        go to state 35
    ASSIGN_EXPR       go to state 36
    EXPR              go to state 37
    NOCOMMA_EXPR      go to state 38
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    TYPE              go to state 50
    UNARY_OP          go to state 51


State 19

  101 UNARY_OP: PLUS •

    $default  reduce using rule 101 (UNARY_OP)


State 20

  102 UNARY_OP: MINUS •

    $default  reduce using rule 102 (UNARY_OP)


State 21

  103 UNARY_OP: NOT •

    $default  reduce using rule 103 (UNARY_OP)


State 22

    0 $accept: PROGRAM • $end
    2 PROGRAM: PROGRAM • END

    $end  shift, and go to state 67
    END   shift, and go to state 68


State 23

    1 PROGRAM: STMT_LIST •
    4 STMT_LIST: STMT_LIST • STMT

    INT_CONST      shift, and go to state 1
    LL_CONST       shift, and go to state 2
    SLASH_COMMENT  shift, and go to state 3
    FLOAT_CONST    shift, and go to state 4
    IDENT          shift, and go to state 5
    INT            shift, and go to state 6
    FLOAT          shift, and go to state 7
    VOID           shift, and go to state 8
    IF             shift, and go to state 9
    FOR            shift, and go to state 10
    WHILE          shift, and go to state 11
    CONTINUE       shift, and go to state 12
    BREAK          shift, and go to state 13
    RETURN         shift, and go to state 14
    CONST          shift, and go to state 15
    SEMICOLON      shift, and go to state 16
    LPAREN         shift, and go to state 17
    LBRACE         shift, and go to state 18
    PLUS           shift, and go to state 19
    MINUS          shift, and go to state 20
    NOT            shift, and go to state 21

    $default  reduce using rule 1 (PROGRAM)

    STMT              go to state 69
    CONTINUE_STMT     go to state 25
    EXPR_STMT         go to state 26
    VAR_DECLARATION   go to state 27
    VAR_DECL_STMT     go to state 28
    FUNC_DECL_STMT    go to state 29
    FOR_STMT          go to state 30
    IF_STMT           go to state 31
    BLOCK_STMT        go to state 32
    RETURN_STMT       go to state 33
    BREAK_STMT        go to state 34
    WHILE_STMT        go to state 35
    ASSIGN_EXPR       go to state 36
    EXPR              go to state 37
    NOCOMMA_EXPR      go to state 38
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    TYPE              go to state 50
    UNARY_OP          go to state 51


State 24

    3 STMT_LIST: STMT •

    $default  reduce using rule 3 (STMT_LIST)


State 25

   10 STMT: CONTINUE_STMT •

    $default  reduce using rule 10 (STMT)


State 26

    5 STMT: EXPR_STMT •

    $default  reduce using rule 5 (STMT)


State 27

   21 VAR_DECL_STMT: VAR_DECLARATION • SEMICOLON

    SEMICOLON  shift, and go to state 70


State 28

    6 STMT: VAR_DECL_STMT •

    $default  reduce using rule 6 (STMT)


State 29

    7 STMT: FUNC_DECL_STMT •

    $default  reduce using rule 7 (STMT)


State 30

    8 STMT: FOR_STMT •

    $default  reduce using rule 8 (STMT)


State 31

    9 STMT: IF_STMT •

    $default  reduce using rule 9 (STMT)


State 32

   13 STMT: BLOCK_STMT •

    $default  reduce using rule 13 (STMT)


State 33

   14 STMT: RETURN_STMT •

    $default  reduce using rule 14 (STMT)


State 34

   16 STMT: BREAK_STMT •

    $default  reduce using rule 16 (STMT)


State 35

   15 STMT: WHILE_STMT •

    $default  reduce using rule 15 (STMT)


State 36

   62 NOCOMMA_EXPR: ASSIGN_EXPR •

    $default  reduce using rule 62 (NOCOMMA_EXPR)


State 37

   18 EXPR_STMT: EXPR • SEMICOLON
   60 EXPR: EXPR • COMMA NOCOMMA_EXPR

    SEMICOLON  shift, and go to state 71
    COMMA      shift, and go to state 72


State 38

   59 EXPR: NOCOMMA_EXPR •

    $default  reduce using rule 59 (EXPR)


State 39

   61 NOCOMMA_EXPR: LOGICAL_OR_EXPR •
   64 LOGICAL_OR_EXPR: LOGICAL_OR_EXPR • OR LOGICAL_AND_EXPR

    OR  shift, and go to state 73

    $default  reduce using rule 61 (NOCOMMA_EXPR)


State 40

   63 LOGICAL_OR_EXPR: LOGICAL_AND_EXPR •
   66 LOGICAL_AND_EXPR: LOGICAL_AND_EXPR • AND EQUALITY_EXPR

    AND  shift, and go to state 74

    $default  reduce using rule 63 (LOGICAL_OR_EXPR)


State 41

   65 LOGICAL_AND_EXPR: EQUALITY_EXPR •
   68 EQUALITY_EXPR: EQUALITY_EXPR • EQ RELATIONAL_EXPR
   69              | EQUALITY_EXPR • NEQ RELATIONAL_EXPR

    EQ   shift, and go to state 75
    NEQ  shift, and go to state 76

    $default  reduce using rule 65 (LOGICAL_AND_EXPR)


State 42

   67 EQUALITY_EXPR: RELATIONAL_EXPR •
   71 RELATIONAL_EXPR: RELATIONAL_EXPR • LT ADDSUB_EXPR
   72                | RELATIONAL_EXPR • GT ADDSUB_EXPR
   73                | RELATIONAL_EXPR • LE ADDSUB_EXPR
   74                | RELATIONAL_EXPR • GE ADDSUB_EXPR

    GT  shift, and go to state 77
    LT  shift, and go to state 78
    GE  shift, and go to state 79
    LE  shift, and go to state 80

    $default  reduce using rule 67 (EQUALITY_EXPR)


State 43

   70 RELATIONAL_EXPR: ADDSUB_EXPR •
   76 ADDSUB_EXPR: ADDSUB_EXPR • PLUS MULDIV_EXPR
   77            | ADDSUB_EXPR • MINUS MULDIV_EXPR

    PLUS   shift, and go to state 81
    MINUS  shift, and go to state 82

    $default  reduce using rule 70 (RELATIONAL_EXPR)


State 44

   75 ADDSUB_EXPR: MULDIV_EXPR •
   79 MULDIV_EXPR: MULDIV_EXPR • MUL UNARY_EXPR
   80            | MULDIV_EXPR • DIV UNARY_EXPR
   81            | MULDIV_EXPR • MOD UNARY_EXPR

    MUL  shift, and go to state 83
    DIV  shift, and go to state 84
    MOD  shift, and go to state 85

    $default  reduce using rule 75 (ADDSUB_EXPR)


State 45

   78 MULDIV_EXPR: UNARY_EXPR •

    $default  reduce using rule 78 (MULDIV_EXPR)


State 46

   82 UNARY_EXPR: BASIC_EXPR •

    $default  reduce using rule 82 (UNARY_EXPR)


State 47

   87 BASIC_EXPR: FUNC_CALL_EXPR •

    $default  reduce using rule 87 (BASIC_EXPR)


State 48

   56 ASSIGN_EXPR: LEFT_VAL_EXPR • ASSIGN NOCOMMA_EXPR
   85 BASIC_EXPR: LEFT_VAL_EXPR •

    ASSIGN  shift, and go to state 86

    $default  reduce using rule 85 (BASIC_EXPR)


State 49

   84 BASIC_EXPR: LITERAL_EXPR •

    $default  reduce using rule 84 (BASIC_EXPR)


State 50

   19 VAR_DECLARATION: TYPE • VAR_DECLARATOR_LIST
   24 FUNC_DECL_STMT: TYPE • IDENT LPAREN PARAM_DECLARATOR_LIST RPAREN FUNC_BODY

    IDENT  shift, and go to state 87

    VAR_DECLARATOR       go to state 88
    VAR_DECLARATOR_LIST  go to state 89


State 51

   83 UNARY_EXPR: UNARY_OP • UNARY_EXPR

    INT_CONST    shift, and go to state 1
    LL_CONST     shift, and go to state 2
    FLOAT_CONST  shift, and go to state 4
    IDENT        shift, and go to state 5
    LPAREN       shift, and go to state 17
    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    NOT          shift, and go to state 21

    UNARY_EXPR      go to state 90
    BASIC_EXPR      go to state 46
    FUNC_CALL_EXPR  go to state 47
    LEFT_VAL_EXPR   go to state 91
    LITERAL_EXPR    go to state 49
    UNARY_OP        go to state 51


State 52

   88 FUNC_CALL_EXPR: IDENT LPAREN • RPAREN
   89               | IDENT LPAREN • EXPR_LIST RPAREN

    INT_CONST    shift, and go to state 1
    LL_CONST     shift, and go to state 2
    FLOAT_CONST  shift, and go to state 4
    IDENT        shift, and go to state 5
    LPAREN       shift, and go to state 17
    RPAREN       shift, and go to state 92
    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    NOT          shift, and go to state 21

    ASSIGN_EXPR       go to state 36
    EXPR_LIST         go to state 93
    NOCOMMA_EXPR      go to state 94
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    UNARY_OP          go to state 51


State 53

   90 ARRAY_DIMENSION_EXPR: LBRACKET • NOCOMMA_EXPR RBRACKET

    INT_CONST    shift, and go to state 1
    LL_CONST     shift, and go to state 2
    FLOAT_CONST  shift, and go to state 4
    IDENT        shift, and go to state 5
    LPAREN       shift, and go to state 17
    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    NOT          shift, and go to state 21

    ASSIGN_EXPR       go to state 36
    NOCOMMA_EXPR      go to state 95
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    UNARY_OP          go to state 51


State 54

   91 ARRAY_DIMENSION_EXPR_LIST: ARRAY_DIMENSION_EXPR •

    $default  reduce using rule 91 (ARRAY_DIMENSION_EXPR_LIST)


State 55

   92 ARRAY_DIMENSION_EXPR_LIST: ARRAY_DIMENSION_EXPR_LIST • ARRAY_DIMENSION_EXPR
   94 LEFT_VAL_EXPR: IDENT ARRAY_DIMENSION_EXPR_LIST •

    LBRACKET  shift, and go to state 53

    $default  reduce using rule 94 (LEFT_VAL_EXPR)

    ARRAY_DIMENSION_EXPR  go to state 96


State 56

   27 IF_STMT: IF LPAREN • EXPR RPAREN STMT
   28        | IF LPAREN • EXPR RPAREN STMT ELSE STMT

    INT_CONST    shift, and go to state 1
    LL_CONST     shift, and go to state 2
    FLOAT_CONST  shift, and go to state 4
    IDENT        shift, and go to state 5
    LPAREN       shift, and go to state 17
    PLUS         shift, and go to state 19
    MINUS        shift, and go to state 20
    NOT          shift, and go to state 21

    ASSIGN_EXPR       go to state 36
    EXPR              go to state 97
    NOCOMMA_EXPR      go to state 38
    LOGICAL_OR_EXPR   go to state 39
    LOGICAL_AND_EXPR  go to state 40
    EQUALITY_EXPR     go to state 41
    RELATIONAL_EXPR   go to state 42
    ADDSUB_EXPR       go to state 43
    MULDIV_EXPR       go to state 44
    UNARY_EXPR        go to state 45
    BASIC_EXPR        go to state 46
    FUNC_CALL_EXPR    go to state 47
    LEFT_VAL_EXPR     go to state 48
    LITERAL_EXPR      go to state 49
    UNARY_OP          go to state 51


State 57

   25 FOR_STMT: FOR LPAREN • VAR_DECLARATION SEMICOLON EXPR SEMICOLON EXPR RPAREN STMT
   26         | FOR LPAREN • EXPR SEMICOLON EXPR SEMICOLON EXPR RPAREN STMT
